feat: add delete endpoint, add application page, add way to create application from form
